Setup for new sort endpoint
